--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,33 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <div class="header">
+    <h1> Phillip Nässén</h1>
+    <h2> Making things up!</h2>
+  </div>
+  <div class="tagline">
+    <h3>Here's what I do!</h3>
+    <p>I really do enjoy learning new things.
+      But is it possible for me to make some money in the process?
+    </p>
+  </div>
+
+  <div class="skills">
+    <h3>Current Skills</h3>
+    <p>This are some of the current challenges</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Git</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>Tell me something!</h3>
+    <p>Don't hesitate to drop me a line if you have something to share.
+    <a href="www.patreon.com/untetheredexperiences">Find me on Patreon!</a></p>
+  </div>
+
+
 
   Welcome to the HTML Portfolio Project
 
